--- a/package.json
+++ b/package.json
@@ -2,13 +2,13 @@
   "name": "discord-music-bot",
   "version": "1.0.0",
   "type": "module",
-  "main": "src/index.js",
+  "main": "index.js",
   "engines": {
     "node": ">=22.12.0"
   },
   "scripts": {
-    "start": "node src/index.js",
-    "register": "node src/deploy/register-commands.js"
+    "start": "node index.js",
+    "register": "node deploy/register-commands.js"
   },
   "dependencies": {
     "@discordjs/voice": "^0.19.0",
