--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "type": "module",
   "main": "src/index.js",
   "engines": {
-    "node": ">=22.0.0"
-  },
+  "node": "20.x"
+}
   "scripts": {
     "start": "node src/index.js",
     "register": "node src/deploy/register-commands.js"
