--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "main": "src/index.js",
   "engines": {
-  "node": "20.x"
+  "node": "20"
 }
   "scripts": {
     "start": "node src/index.js",
